src/components/Transaction/Transaction.scss
/* ... */
.withdraw {
  &-hint {
    margin-top: 10px;
    color: var(--hints-color);
  }

  &-type {
    &-block {
      display: flex;
      align-items: center;
      margin-bottom: 15px;
      cursor: pointer;
    }
  }
}

.success-block {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 15px;
  color: var(--light-bg-color);
  background-color: var(--success-color);
  border-radius: 5px;
}

.info-block {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 50px;
  padding: 15px;
  color: var(--info-message-text-color);
  background-color: var(--info-message-color);
  border: 1px solid var(--border-color);
  border-radius: 5px;

  & > p {
    margin-bottom: 0;
    font-size: var(--md-font-size);
  }

  &.center {
    margin-bottom: 25px;
    text-align: center;

    & > p {
      font-size: var(--large-font-size);
    }
  }
}

.currency {
  &-selector {
    margin-left: 10px;
    padding-right: 20px;
    color: var(--dark-color);
    font-size: var(--xxxl-font-size);
    background-color: var(--transparent);
    background-image: url(../../images/arrow-select.svg);
    background-repeat: no-repeat;  
    background-position: right;
    border: none;
    outline: none;
    appearance: none;

    & > option {
      /* stylelint-disable-next-line no-descending-specificity */
      & > p {
        font-size: var(--large-font-size);
      }
    }
  }

  &-input {
    max-width: 130px;
    height: 40px;
    min-height: 40px;
    max-height: 40px;
    padding: 0;
    overflow: visible;
    color: var(--dark-color);
    font-size: var(--md-font-size);
    line-height: var(--xl-font-size);
    background-color: var(--modal-bg-color);
    border: none;
    outline: none;

    &:focus {
      border: none;
    }

    &-address {
      width: 100%;
      max-height: 50px;
      padding: 0;
      color: var(--dark-color);
      font-size: var(--xs-font-size);
      white-space: nowrap;
      text-overflow: ellipsis;
      background-color: var(--transparent);
      border: none;
      outline: none;

      &:focus {
        border: none;
      }
    }
    /* stylelint-disable no-descending-specificity */
    &-wrapper {
      display: flex;
      align-items: center; 
      justify-content: space-between;
      width: 100%;
      max-width: 500px;
      height: 50px;
      margin-top: 10px;
      margin-top: 0;
      background-color: var(--transparent);
      
      & > span {
        color: var(--hints-color);
      }

      &.border {
        width: 100%;
        height: 65px;
        border-bottom: 1px solid var(--border-color);
      }
    }

    &::placeholder {
      overflow: visible;
      color: var(--hints-color);
      font-size: var(--xl-font-size);
      line-height: 20px;
    }
  }
}

.amount-price {
  display: none;
  margin-top: 10px;
  margin-left: 5px;
}

.all-balance {
  align-items: center;
  justify-content: space-between;
  width: auto;
  max-width: 220px;
  margin-left: -10px;
  padding: 0 10px;
  color: var(--links-color);
  font-size: var(--sm-font-size);
  text-decoration: underline;
  background-color: var(--modal-bg-color);
  border: none;
  border-radius: 5px;
  outline: none;

  &-empty {
    margin-bottom: 0;
    padding: 0 10px;
    color: var(--dark-color);
    font-size: var(--sm-font-size);
  }

  &-wrapper {
    display: flex;
    color: var(--dark-color);
  }

  &:hover {
    background-color: var(--copyblock-color);
  }

  & > span {
    font-size: var(--xl-font-size);
  }
}

.submit-label {
  width: 20px;
  height: 20px;
  background-color: var(--transparent);
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;

  &.unlock {
    background-image: url(../../images/lock.svg);
  }

  &.Deposit {
    background-image: url(../../images/deposit_white.svg);

    &.false{
      background-image: url(../../images/deposit_disable.svg);
    }
  }

  &.Send {
    background-image: url(../../images/send_white.svg);

    &.false{
      background-image: url(../../images/send_disable.svg);
    }
  }

  &.Withdraw {
    display: block;
    width: 15px;
    height: 2px;
    margin-right: 8px;
    background-color: var(--button-text-color);

    &.false{
      background-color: var(--hints-color);
    }
  }
}

.scroll-wrapper {
  width: 260px;
  height: 30px;
  overflow: hidden;
  overflow-x: scroll;
  scrollbar-color: var(--button-bg-color) var(--transparent);
  scrollbar-width: thin;

  & > .currency-input {
    min-width: 60px;
    max-width: none;
    max-width: inherit;
  }
}

.scroll-wrapper::-webkit-scrollbar{
  width: 6px;
  height: 4px;
  overflow-x: scroll;
  background: var(--transparent);
  cursor: pointer;
  scrollbar-color: var(--transparent);
}

.scroll-wrapper::-webkit-scrollbar-thumb:horizontal{
  background: var(--button-bg-color);
  border-radius: 10px;
}

.inputs-wrapper {
  display: flex;
  flex-direction: column;

  &.Transfer {
    flex-direction: column-reverse;
  }
}
/* ... */

